--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
     "@mui/x-date-pickers": "^5.0.11",
+    "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-calendly": "^4.1.0",
