--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "backend/server for the hope-health-van applicatin to send and process data",
   "main": "server.js",
+  "engines":{
+    "node": "18.x"
+  },
   "scripts": {
     "start": "nodemon server.js"
   },
