--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "backend/server for the hope-health-van applicatin to send and process data",
   "main": "server.js",
-  "engines":{
+  "engines": {
     "node": "18.x"
   },
   "scripts": {
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/connorjchen/hope-health-van#readme",
   "dependencies": {
     "axios": "^1.2.1",
+    "chromium": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
