--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.8.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "pupeteer": "^0.0.1",
     "uuid": "^9.0.0",
     "wbm": "^1.1.16"
   }
