--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,13 @@
   "homepage": "https://github.com/connorjchen/hope-health-van#readme",
   "dependencies": {
     "axios": "^1.2.1",
-    "chromium": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "pupeteer": "^0.0.1",
+    "puppeteer": "^19.4.1",
     "uuid": "^9.0.0",
     "wbm": "^1.1.16"
   }
