--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.8.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wbm": "^1.1.16"
   }
 }
