--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/connorjchen/hope-health-van#readme",
   "dependencies": {
     "axios": "^1.2.1",
+    "chrome-aws-lambda": "^9.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
