--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,6 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0",
-    "wbm": "^1.1.16",
-    "whatsapp-web": "^1.0.3"
+    "wbm": "^1.1.16"
   }
 }
