--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "backend/server for the hope-health-van applicatin to send and process data",
   "main": "server.js",
   "engines": {
-    "node": "^14"
+    "node": "18.x"
   },
   "scripts": {
     "start": "nodemon server.js"
