--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^5.0.11",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-calendly": "^4.1.0",
     "react-dom": "^18.2.0",
